<resources>
    <string name="app_name">Hello World Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="hello">Привет</string>
    <string name="todo">TODO</string>
    <string name="world">Мир</string>
    <string name="buttons_and_chairs">Кнопки и табуретки</string>
    <string name="fields">Поля выпаса ввода</string>
    <string name="checkboxes">Чекбокс на радио</string>
    <string name="input_fields">Поля для ввода разного типа</string>
    <string name="one_line_text">Однострочный текст</string>
    <string name="five_line_text">Текст на 5 строк</string>
    <string name="password">Пароль</string>
    <string name="year">Год</string>
    <string name="hide_keyboard">Спрятать клавиатуру</string>
    <string name="button_off_applinces">Кнопка Приборы отключает Приборы</string>
    <string name="applinces">Приборы</string>
    <string name="off_radio">Выключить радио</string>
    <string name="off_slider">Выключить ползунок</string>
    <string name="choose_variand_by_radio">Выбрать вариант по радио</string>
    <string name="v_1">Вариант 1</string>
    <string name="v_2">Вариант 2</string>
    <string name="v_3">Вариант 3</string>
    <string name="button">Кнопка </string>
</resources>