<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:elevation="@dimen/elevation_toolbar"
        app:navigationIcon="@drawable/ic_keyboard_backspace"
        app:navigationIconTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/less_margin"
        android:fontFamily="sans-serif-thin"
        android:text="@string/input_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/oneLineEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elements_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_marginEnd="@dimen/elements_margin"
        android:background="@drawable/edit_text_style"
        android:elevation="@dimen/view_elevation"
        android:hint="@string/one_line_text"
        android:maxLength="20"
        android:inputType="text"
        android:padding="@dimen/edit_text_padding"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/machLineEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/much_line_edit_height"
        android:layout_marginStart="@dimen/elements_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_marginEnd="@dimen/elements_margin"
        android:background="@drawable/edit_text_style"
        android:elevation="@dimen/view_elevation"
        android:hint="@string/five_line_text"
        android:inputType="textMultiLine"
        android:padding="@dimen/edit_text_padding"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/oneLineEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/password_edit_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/elements_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:background="@drawable/edit_text_style"
        android:elevation="@dimen/view_elevation"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:padding="@dimen/edit_text_padding"
        app:layout_constraintEnd_toStartOf="@+id/dataEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/machLineEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/dataEditText"
        android:layout_width="@dimen/much_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/less_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_marginEnd="@dimen/elements_margin"
        android:background="@drawable/edit_text_style"
        android:elevation="@dimen/view_elevation"
        android:hint="@string/year"
        android:inputType="date"
        android:maxLength="4"
        android:padding="@dimen/edit_text_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/machLineEditText"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/hideKeyboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/less_margin"
        android:elevation="@dimen/view_elevation"
        android:text="@string/hide_keyboard"
        app:layout_constraintEnd_toEndOf="@id/dataEditText"
        app:layout_constraintTop_toBottomOf="@id/dataEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>