<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">
    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.helloworldapplication.fragments.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_MainFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_MainFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"/>
        <action
            android:id="@+id/action_MainFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"/>
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.helloworldapplication.fragments.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first"/>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.helloworldapplication.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
    </fragment>


    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.helloworldapplication.fragments.ThirdFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second"/>

</navigation>