<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:background="@color/green"
        android:elevation="@dimen/elevation_toolbar"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_keyboard_backspace"
        app:navigationIconTint="@color/white" />

    <TextView
        android:id="@+id/text"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_width="wrap_content"
        android:text="@string/button_off_applinces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appliance"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/elements_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <TextView
            android:fontFamily="monospace"
            android:id="@+id/appliancesTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/applinces"
            android:textColor="@color/black"
            android:textSize="@dimen/less_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            style="@style/customCheckBox"
            android:id="@+id/applianceCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radioOnOff"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/elements_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/appliance">

        <TextView
            android:fontFamily="monospace"
            android:id="@+id/radioTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/off_radio"
            android:textColor="@color/black"
            android:textSize="@dimen/less_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            style="@style/customCheckBox"
            android:enabled="false"
            android:id="@+id/radioCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sliderOnOff"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/elements_margin"
        android:layout_marginTop="@dimen/less_margin"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/radioOnOff">

        <TextView
            android:fontFamily="monospace"
            android:id="@+id/sliderTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/off_slider"
            android:textColor="@color/black"
            android:textSize="@dimen/less_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            style="@style/customCheckBox"
            android:enabled="false"
            android:id="@+id/sliderCheckBox"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radioLayout"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/elements_margin"
        android:layout_marginTop="@dimen/radio_group_margin_top"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderOnOff">

        <TextView
            android:id="@+id/textRadioButtons"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/less_margin"
            android:layout_width="wrap_content"
            android:text="@string/choose_variand_by_radio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:elevation="@dimen/view_elevation"
            android:id="@+id/radioGroup"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRadioButtons">

            <RadioButton
                android:enabled="false"
                android:id="@+id/radioFirst"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/v_1" />

            <RadioButton
                android:enabled="false"
                android:id="@+id/radioSecond"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/v_2" />

            <RadioButton
                android:enabled="false"
                android:id="@+id/radioThird"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/v_3" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <SeekBar
        android:enabled="false"
        android:id="@+id/seekBar"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/elements_margin"
        android:layout_width="match_parent"
        android:max="3"
        android:min="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>